Fix mejs overflow bug in Firefox.

--- a/style.css
+++ b/style.css
@@ -184,7 +184,9 @@ a:focus { outline: 0 }
  
 /* Single Post
 ----------------------------------------------------------- */
-#post-thumbnail { height: 512px; width: 100% !important; padding: 0; overflow: hidden;}
+.post-media { overflow: hidden; }
+#post-media,
+#post-thumbnail { height: 512px; width: 100% !important; padding: 0; overflow: hidden; }
 #post-thumbnail img,
 #post-media img { height: 512px; width: 100%; object-fit: contain; object-position: center center;}
 #post-thumbnail img { -webkit-backdrop-filter: blur(50px); backdrop-filter: blur(50px); background: rgba(0, 0, 0, 0.5); }
